--- a/templates/products/listado.html
+++ b/templates/products/listado.html
@@ -18,7 +18,7 @@
                                 <p class="card-text">{{ product.price }}€</p>
                             </div>
                             <div class='card-footer text-center'>
-                                <a href="{% url 'cart:add_product' product.id %}" class="btn btn-success">
+                                <a href="#" class="btn btn-success">
                                     Añadir al carrito
                                 </a>
                             </div>
