--- a/templates/layouts/tienda.html
+++ b/templates/layouts/tienda.html
@@ -1,15 +1,21 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} - Proyecto Carrito</title>
+    <!-- definimos un title dinamico con Proyecto carrito como statico -->
+    <title> {% block title %} {% endblock %} - Proyecto Carrito</title>
+    {% load static %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"/>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"></a>
+    <!-- aqui se define la navegación superior de nuestro template -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-success">
+        <!-- en el href la barra / indica que vaya a la raiz -->
+        <a class="navbar-brand" href="/"> <p class="text-white"> Tienda "Los cuatro cuatros" </p>  </a>
+        <!-- este boton hace que se colapse en el caso que la resolucion sea muy pequeña
+        ello nos permite vizualizar en otro dispositivo ejemplo movil hace que se abra o se cierra para mejor vizualización -->
         <button
             class="navbar-toggler"
             type="button"
@@ -23,23 +29,44 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-            <!-- listar productos -->
+            <!-- esta nevagación iria en la parte izquierda de mi pantalla y es donde se litarian los productos -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'listado_productos' %}">Tienda</a>
+                    <a class="nav-link" href="{% url 'products:listado_productos' %}"> <p class="text-white"> Tienda </p></a>
                 </li>
             </ul>
-
+            <!-- navegacion a la derecha -->
             <ul class="navbar-nav ml-auto">
                <!-- configuraciones -->
+               <!-- si el usuario esta autenticado podra -->
+               {% if user.is_authenticated %}
+                    <li class="nav-item">                       
+                        <a class="nav-link" href="#"> <p class="text-white"> Mis pedidos </p></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> Hola {{ user.username }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'autenticacion:salir' %}"> <p class="text-white"> Cerrar sesión </p></a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'autenticacion:acceder' %}"> <p class="text-white"> Acceder </p></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'autenticacion:registro' %}">  <p class="text-white"> Registro </p></a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
-
+    <!-- gestion de mensajes -->
     <div class="container mt-3">
+        <!-- preguntamos si hay mensjaes de error -->
         {% if messages %}
             <div class="row mt-3 mb-3">
                 <div class="col-12">
+                    <!-- sihay las recorremos para irlas mostrando, estos mensajes son de bootstrap -->
                     {% for message in messages %}
                         <div class="alert alert-{{ message.tags }}">
                             {{ message }}
@@ -48,8 +75,10 @@
                 </div>
             </div>
         {% endif %}
-
-        {% block content %}{% endblock %}
+            <!-- definimos el contenido de lo que deseamos mostrar -->
+            <!-- si estamos en productos mostraremos productos, si estamos en pedidos mostraremos pedidos etc. -->
+            
+        {% block content %} {% endblock %}
     </div>
 
     <script src="{% static 'js/jquery-slim.min.js' %}"></script>
